changes to main_figure and paper

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1037,6 +1037,68 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{borucki2010,
+       author = {{Borucki}, William J. and {Koch}, David and {Basri}, Gibor and
+         {Batalha}, Natalie and {Brown}, Timothy and {Caldwell}, Douglas and
+         {Caldwell}, John and {Christensen-Dalsgaard}, J{\o}rgen and
+         {Cochran}, William D. and {DeVore}, Edna and {Dunham}, Edward W. and
+         {Dupree}, Andrea K. and {Gautier}, Thomas N. and {Geary}, John C. and
+         {Gilliland}, Ronald and {Gould}, Alan and {Howell}, Steve B. and
+         {Jenkins}, Jon M. and {Kondo}, Yoji and {Latham}, David W. and
+         {Marcy}, Geoffrey W. and {Meibom}, S{\o}ren and {Kjeldsen}, Hans and
+         {Lissauer}, Jack J. and {Monet}, David G. and {Morrison}, David and
+         {Sasselov}, Dimitar and {Tarter}, Jill and {Boss}, Alan and
+         {Brownlee}, Don and {Owen}, Toby and {Buzasi}, Derek and
+         {Charbonneau}, David and {Doyle}, Laurance and {Fortney}, Jonathan and
+         {Ford}, Eric B. and {Holman}, Matthew J. and {Seager}, Sara and
+         {Steffen}, Jason H. and {Welsh}, William F. and {Rowe}, Jason and
+         {Anderson}, Howard and {Buchhave}, Lars and {Ciardi}, David and
+         {Walkowicz}, Lucianne and {Sherry}, William and {Horch}, Elliott and
+         {Isaacson}, Howard and {Everett}, Mark E. and {Fischer}, Debra and
+         {Torres}, Guillermo and {Johnson}, John Asher and {Endl}, Michael and
+         {MacQueen}, Phillip and {Bryson}, Stephen T. and {Dotson}, Jessie and
+         {Haas}, Michael and {Kolodziejczak}, Jeffrey and {Van Cleve}, Jeffrey and
+         {Chandrasekaran}, Hema and {Twicken}, Joseph D. and
+         {Quintana}, Elisa V. and {Clarke}, Bruce D. and {Allen}, Christopher and
+         {Li}, Jie and {Wu}, Haley and {Tenenbaum}, Peter and
+         {Verner}, Ekaterina and {Bruhweiler}, Frederick and {Barnes}, Jason and
+         {Prsa}, Andrej},
+        title = "{Kepler Planet-Detection Mission: Introduction and First Results}",
+      journal = {Science},
+     keywords = {ASTRONOMY},
+         year = "2010",
+        month = "Feb",
+       volume = {327},
+       number = {5968},
+        pages = {977},
+          doi = {10.1126/science.1185402},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010Sci...327..977B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{garcia2014,
+       author = {{Garc{\'\i}a}, R.~A. and {Ceillier}, T. and {Salabert}, D. and
+         {Mathur}, S. and {van Saders}, J.~L. and {Pinsonneault}, M. and
+         {Ballot}, J. and {Beck}, P.~G. and {Bloemen}, S. and {Campante}, T.~L. and
+         {Davies}, G.~R. and {do Nascimento}, J. -D., Jr. and {Mathis}, S. and
+         {Metcalfe}, T.~S. and {Nielsen}, M.~B. and {Su{\'a}rez}, J.~C. and
+         {Chaplin}, W.~J. and {Jim{\'e}nez}, A. and {Karoff}, C.},
+        title = "{Rotation and magnetism of Kepler pulsating solar-like stars. Towards asteroseismically calibrated age-rotation relations}",
+      journal = {\aap},
+     keywords = {asteroseismology, stars: activity, stars: rotation, stars: solar-type, stars: evolution, stars: oscillations, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2014",
+        month = "Dec",
+       volume = {572},
+          eid = {A34},
+        pages = {A34},
+          doi = {10.1051/0004-6361/201423888},
+archivePrefix = {arXiv},
+       eprint = {1403.7155},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014A&A...572A..34G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @article{astropy2018,
     Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
