--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -90,8 +90,8 @@ approach to calibrating gyrochronology}
     Travis Berger,
     Jason Curtis,
     Lauren Anderson,
-    Rocio Kiman}
-    % Dan Foreman-Mackey,
+    Rocio Kiman
+    \% Dan Foreman-Mackey}
     % Megan Bedell,
     % Jackie Faherty,
     % Melissa Ness}
