--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -7,9 +7,9 @@ main-sequence stars.
 % period and color/temperature/mass does not remain constant over large
 % timescales, contradicting a long-held assumption that underlies many
 % gyrochronology relations.
-In this work, we use the velocities of low-mass \kepler\ dwarfs to reveal
-their rotational evolution and demonstrate that kinematics have potential to
-be a useful tool for calibrating gyrochronology.
+In this work, we use the velocities of low-mass \kepler\ dwarfs as an age
+proxy, to reveal their rotational evolution and demonstrate that kinematics
+could be a useful tool for calibrating gyrochronology.
 At ages less than $\sim$1 Gyr we find that a gyrochronology model, calibrated
 to the Praesepe cluster, accurately predicts the relative ages of stars.
 At these young ages, lower-mass stars spin more slowly than higher-mass stars
