--- a/paper/discussion.tex
+++ b/paper/discussion.tex
@@ -6,68 +6,72 @@
 
 The results presented above indicate that stars of spectral type ranging from
 late G to late K follow a braking law that changes over time.
+In particular, the relationship between rotation period and effective
+temperature appears to flatten out and eventually invert.
 These results provide further evidence for `stalled' rotational evolution of K
 dwarfs, like that observed in open clusters \citep{curtis2019} and reproduced
 by models that vary angular momentum transport between stellar core and
 envelope with time and mass \citep{spada2019}.
 
-Our results indicate that, at young ages, stellar rotation period decreases
-with mass.
+The velocity dispersions of stars in the \mct\ sample provide the following
+picture of rotational evolution.
+At young ages, stellar rotation period decreases with mass.
 This is probably because lower-mass stars with deeper convection zones have
 stronger magnetic fields, larger Alfven radii and therefore experience greater
 angular momentum loss rate.
 According to the \citet{spada2019} models, there is minimal transportation of
 angular momentum from the surface to the core of the star at these young ages,
 so the surface slows down but the core keeps spinning rapidly.
-At intermediate ages, rotation periods appear constant with mass, and at late
-ages rotation period increases with mass for GK dwarfs.
-The explanation for this phenomenon, according to the \citet{spada2019}
-models, is that lower-mass stars are still braking more efficiently at these
-intermediate and old ages but their cores are more tightly coupled with their
-envelopes, so angular momentum resurfaces and prevents the stellar envelopes
-from spinning-down rapidly.
+At intermediate ages, rotation period is constant with mass, and at late ages
+rotation period {\it increases} with mass for GK dwarfs.
+The explanation for this, according to the \citet{spada2019} models, is that
+lower-mass stars are still braking more efficiently at these intermediate and
+old ages but their cores are more tightly coupled to their envelopes, allowing
+angular momentum transport between the two interior layers.
+Angular momentum resurfaces and prevents the stellar envelopes from
+spinning-down rapidly.
 
-The origin of the rotation period gap, first identified by
-\citet{mcquillan2013} and visible in figures \ref{fig:age_cut} and
-\ref{fig:dispersion_period_teff} still remains a mystery.
-This gap can be seen as an under-density of points between the 0.7-1.0 and
-1.0-1.5 Gyr age ranges in figure \ref{fig:age_cut} and roughly follows a line
-of constant gyrochronal age of around 1.1 Gyr \citep[according to the
-gyrochronology relation of][]{angus2019}, as shown in figure
-\ref{fig:dispersion_period_teff}.
-Several explanations for the gap's origin have been proposed, including a
-discontinuous star formation history \citep{mcquillan2013, davenport2017,
-davenport2018} and a change in magnetic field structure causing a brief period
-where rotational variability is reduced and rotation periods cannot be
-measured \citep{reinhold2019}.
-Our results indicate there might be a slight difference in rotational
-evolution below and above the gap.
-Stars below the gap appear to be in the regime where wind-braking is dominant
-(rotation period decreases with increasing mass at a given age) and stars
-above the gap are in a regime where rotational coupling is dominant (rotation
-period increases with increasing mass at a given age).
-This can be seen in figures \ref{fig:age_cut} and \ref{fig:vplot}.
-For stars below the gap, in the 0.7-1.0 Gyr age range shown in figure
-\ref{fig:age_cut}, velocity dispersion is relatively constant as a function of
-temperature, however above the gap, in the 1.0-1.5 Gyr age range and older,
-velocity dispersion increases with \teff.
-In figure \ref{fig:age_cut}, velocity dispersion within a given period range
-appears to {\it decrease} with decreasing temperature below the gap.
-The opposite appears to be true above the gap.
-This suggests that perhaps stars transition from a wind braking regime to a
-rotational coupling regime as they pass across the gap.
-However, it is unclear how this process could {\it create} the gap.
-A gap could be created if stars rapidly lose angular momentum over a short
-period of time, leading to a dearth of stars in the gap.
-However, a sudden redistribution of angular momentum from the core to the
-surface, should cause stellar rotation periods to {\it decrease}, not
-increase.
-In addition, this theory is not supported by observations of the NGC 6811
-cluster whose K dwarf members have already undergone stalled braking below and
-before they reach the gap.
-The gap may be associated with a wind braking-rotational coupling transition,
-however our results only provide weak evidence for this, so we can only
-speculate until more data become available.
+% The origin of the rotation period gap, first identified by
+% \citet{mcquillan2013} and visible in figures \ref{fig:age_cut} and
+% \ref{fig:dispersion_period_teff} still remains a mystery.
+% This gap can be seen as an under-density of points between the 0.7-1.0 and
+% 1.0-1.5 Gyr age ranges in figure \ref{fig:age_cut} and roughly follows a line
+% of constant gyrochronal age of around 1.1 Gyr \citep[according to the
+% gyrochronology relation of][]{angus2019}, as shown in figure
+% \ref{fig:dispersion_period_teff}.
+% Several explanations for the gap's origin have been proposed, including a
+% discontinuous star formation history \citep{mcquillan2013, davenport2017,
+% davenport2018} and a change in magnetic field structure causing a brief period
+% where rotational variability is reduced and rotation periods cannot be
+% measured \citep{reinhold2019}.
+% Our results indicate there might be a slight difference in rotational
+% evolution below and above the gap.
+% Stars below the gap appear to be in the regime where wind-braking is dominant
+% (rotation period decreases with increasing mass at a given age) and stars
+% above the gap are in a regime where rotational coupling is dominant (rotation
+% period increases with increasing mass at a given age).
+% This can be seen in figures \ref{fig:age_cut} and \ref{fig:vplot}.
+% For stars below the gap, in the 0.7-1.0 Gyr age range shown in figure
+% \ref{fig:age_cut}, velocity dispersion is relatively constant as a function of
+% temperature, however above the gap, in the 1.0-1.5 Gyr age range and older,
+% velocity dispersion increases with \teff.
+% In figure \ref{fig:age_cut}, velocity dispersion within a given period range
+% appears to {\it decrease} with decreasing temperature below the gap.
+% The opposite appears to be true above the gap.
+% This suggests that perhaps stars transition from a wind braking regime to a
+% rotational coupling regime as they pass across the gap.
+% However, it is unclear how this process could {\it create} the gap.
+% A gap could be created if stars rapidly lose angular momentum over a short
+% period of time, leading to a dearth of stars in the gap.
+% However, a sudden redistribution of angular momentum from the core to the
+% surface, should cause stellar rotation periods to {\it decrease}, not
+% increase.
+% In addition, this theory is not supported by observations of the NGC 6811
+% cluster whose K dwarf members have already undergone stalled braking below and
+% before they reach the gap.
+% The gap may be associated with a wind braking-rotational coupling transition,
+% however our results only provide weak evidence for this, so we can only
+% speculate until more data become available.
 
 % The \citet{spada2019} models do predict that stars transition from a regime
 % where wind-braking is dominant to a regime where rotational coupling is
