--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -3,25 +3,34 @@
 
 \subsection{Gyrochronology}
 
-It is well established that magnetized stellar winds cause the rotation
-periods of FGKM dwarfs to increase over time \citep[\eg][]{schatzman1962,
-weber1967, skumanich1972, kawaler1988, pinsonneault1989}, and, once fully
-calibrated, the relationship between period, mass and age can be used to
-age-date stars via gyrochronology \citep{barnes2003, barnes2007, barnes2010,
-meibom2011, meibom2015}.
-% However, the exact nature of rotational evolution is still being actively
-% studied.
-% Once the relationship between rotation period, mass and age is well
-% calibrated, rotation periods can be used to precisely and accurately date
-% stars via gyrochronology \citep[\eg][]{kawaler1989, pinsonneault1989,
-% barnes2003, barnes2007, barnes2010, meibom2011, meibom2015}.
-% It is also well established that stars of the same age but different masses
-However, new photometric rotation periods measured from \kepler\ light curves
-reveal that rotational evolution is more complicated than previously thought.
-For example, the M dwarfs in the $\sim$ 700 Myr Praesepe cluster spin more
+Stars with significant convective envelopes ($\lesssim$ 1.3 M$_\odot$) have
+strong magnetic fields and spin more slowly over time through magnetic braking
+\citep[\eg][]{schatzman1962, weber1967, skumanich1972, kawaler1988,
+pinsonneault1989}.
+Although stars are typically born with random rotation periods, ranging from 1
+to 10 days, observations of young open clusters reveal that their rotation
+periods converge onto a unique sequence by $\sim$500-700 million years
+\citep[\eg][]{irwin2009}.
+After this time, it is thought that the rotation period of a star is
+determined, to first order, by its color and age alone.
+This is the principle behind gyrochronology -- the method of inferring a
+star’s age from its rotation period \citep[\eg][]{barnes2003, barnes2007,
+barnes2010, meibom2011, meibom2015}.
+% It is well established that magnetized stellar winds cause the rotation
+% periods of FGKM dwarfs to increase over time \citep[\eg][]{schatzman1962,
+% weber1967, skumanich1972, kawaler1988, pinsonneault1989}, and, once fully
+% calibrated, the relationship between period, mass and age can be used to
+% age-date stars via gyrochronology \citep{barnes2003, barnes2007, barnes2010,
+% meibom2011, meibom2015}.
+However, new photometric rotation periods made available by the \kepler\
+\citep{borucki2010} and \ktwo\ \citep{howell2014} missions
+\citep[\eg][]{mcquillan2014, garcia2014, douglas2017, rebull2017, meibom2011,
+meibom2015, curtis2019} reveal that rotational evolution is more complicated
+than previously thought.
+For example, the M dwarfs in the $\sim$ 650 Myr Praesepe cluster spin more
 slowly than the G dwarfs -- in theory because lower-mass stars have deeper
 convections zones which generate stronger magnetic fields and more efficient
-magnetic braking \citep{schatzman1962, weber1967}.
+magnetic braking.
 However, in the 1.1 Gyr NGC 6811 cluster, late-K dwarfs rotate at the {\it
 same} rate as early-K dwarfs \citep{curtis2019}.
 In other words, convection zone depth cannot be the only variable that affects
@@ -29,43 +38,19 @@ stellar spin-down rate.
 New semi-empirical models that vary the rate of angular momentum
 redistribution in the interiors of stars are able to reproduce this flattened
 period-color relation \citep{spada2019}.
-These models suggest that mass and age-dependent coupling between the cores
-and envelopes of stars has a significant impact on their surface rotation
-rates.
+These models suggest that mass and age-dependent angular momentum transport
+between the cores and envelopes of stars has a significant impact on their
+surface rotation rates.
 
 Another example of unexpected rotational evolution is seen in old field stars
 which appear to rotate more rapidly than classical gyrochronology models
 predict \citep{angus2015, vansaders2016, vansaders2018, metcalfe2019}.
 A mass-dependent modification to the classical \prot\ $\propto
 t^{\frac{1}{2}}$ spin-down law \citep{skumanich1972} is required to reproduce
-the observations \citep{vansaders2016, vansaders2018}.
-% revealing that rotational
-% evolution is clearly a more complicated process than once thought.
-% However, an underlying assumption behind many empirical gyrochronology
-% relations is that the relationships between rotation period and photometric
-% color\footnote{As the directly observable quantity, color is often used as a
-% mass proxy, and empirical gyrochronology relations are usually calibrated in
-% color, rather than mass or effective temperature.},
-% and rotation period and age are {\it separable}, meaning that the
-% period-color relation is the same at all ages and the period-age relation is
-% the same at all colors \citep[\eg][]{barnes2003, barnes2007, mamajek2008,
-% meibom2011, angus2015, angus2019}.
-% Not all gyrochronology models follow this form, particularly those based on
-% stellar structure and evolution theory or with a Rossby number, rather than
-% rotation period dependence \citep[\eg][]{barnes2010, matt2012,
-% vansaders2016]}.
-% For example, old field stars seem rotate more rapidly than models predicted
-% \citep{angus2015, vansaders2016, vansaders2018, metcalfe2019}, and a
-% mass-dependent modification to the classical \prot\ $\propto t^{\frac{1}{2}}$
-% spin-down law \citep{skumanich1972} is required to reproduce the data
-% \citep{vansaders2016, vansaders2018}.
-% In addition, recent analyses of the 1.1 Gyr open cluster, NGC 6811, provide
-% further indication that rotational evolution is mass and time-dependent
-% \citep{curtis2019 spada2019}.
-% This cluster has a flattened relationship between rotation period and
-% color: the early-K dwarfs rotate at the same rate as the late-K dwarfs.
-% With the advent of large time-series photometry surveys, providing large
-% numbers of precise rotation period measurements over the last few years.
+these observations.
+To fit magnetic braking models to these data, a cessation of magnetic braking
+is required after stars reach a Rossby number (ratio of rotation period to
+convective turnover time) of around 2 \citep{vansaders2016, vansaders2018}.
 
 The rotational evolution of stars is clearly a complicated process, and to
 fully calibrate the gyrochronology relations we need reliable ages for large
@@ -76,9 +61,8 @@ numbers of field stars which span a range of ages.
 % sample.
 In this paper, we use the velocity dispersions of field stars to gain insight
 into their rotational evolution.
-% This technique provides relative ages for groups of stars that cover a broad
-% range of masses and ages, allowing us to observe the rotational evolution of
-% stars in an average sense.
+Velocity dispersion provides relative ages for groups of stars, allowing us to
+observe the rotational evolution of stars over a range of masses and ages.
 
 \subsection{Using kinematics as an age proxy}
 
@@ -94,8 +78,9 @@ with giant molecular clouds, spiral arms and the galactic bar are thought to
 play an important role \citep[see][for a review of secular evolution in the
 MW]{sellwood2014}.
 Although the velocity of any individual star will only provide a weak age
-constraint, the velocity dispersion of a group of stars can indicate whether,
-on average, that group is old or young relative to other groups.
+constraint, the velocity {\it dispersion} of a {\it group} of stars can
+indicate whether, on average, that group is old or young relative to other
+groups.
 In this work we compare the velocity dispersions of groups of field stars in
 the Galactic thin disk to ascertain which groups are older and which younger
 and draw conclusions based on the implied relative ages.
